<resources>
    <string name="app_name">ChatApp</string>
    <string name="login_failed">Login failed!</string>
    <string name="title_activity_authen">Chat Me</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="go_to_sign_up">No account yet? Create one</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Already a member? Login</string>
    <string name="welcome">Welcome</string>
    <string name="register_successfully">Register successfully!</string>
    <string name="register_failed">Register failed!</string>
    <string name="email_can_not_be_blank">Email can\'t be blank!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="password_can_not_be_blank">Password can\'t be blank!</string>
    <string name="confirm_password_can_not_be_blank">Confirm Password can\'t be blank!</string>
    <string name="password_is_not_duplicated">Password is not duplicated!</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_successfully">Login successfully!</string>
    <string name="password_must_have_min_6_characters">Password must have min 6 characters</string>
    <string name="auth_error">Invalid username and password combination!</string>
    <string name="menu">menu</string>
    <string name="home">Home</string>
    <string name="loading">Loading...</string>
    <string name="signing_in">Signing in</string>
    <string name="registering">Registering</string>
    <string name="USERS_DATABASE">Users</string>
    <string name="MESSAGE_RECENT_DATABASE">MessageRecent</string>
    <string name="DIALOGS_DATABASE">Dialogs</string>
    <string name="title_of_list_user_activity">Danh sách cuộc trò chuyện</string>
</resources>
