<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context="fsi.studymyselft.nguyenthanhthi.chatapp.activities.authen.register.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/main_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:errorEnabled="false"
            app:hintTextAppearance="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/white"
            app:errorEnabled="false"
            app:hintTextAppearance="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_background_button_login">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <!--confirm password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/white"
            app:errorEnabled="false"
            app:hintTextAppearance="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_background_button_login">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/color_background_button_login"
            android:textColor="@color/white"
            android:text="@string/create_an_account"/>

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="Click here to login"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>
